--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body{
     font-family: 'Overpass', sans-serif;
 
     background-color: hsl(216, 12%, 8%); /*very dark blue*/
+
+    /*this centers the card element*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .big_txt{
@@ -11,33 +16,76 @@ body{
 
 .normal_txt{
     color: hsl(216, 12%, 54%);/*Medium Grey*/
-    font-size: 1rem;
+    font-size: 0.9375rem;/*15px*/
     font-weight: 400;
 }
 
-.button_txt{
-    color: hsl(217, 12%, 63%); /*Light Grey*/
-}
-
 .card{
-    background-color: hsl(213, 19%, 18%);/*Dark Blue*/
-    width: 500px;
-    height: 500px;
+    background-color: hsl(214, 24%, 11%);/*Dark Blue modified to be darker*/
+    background-image: linear-gradient(hsl(213, 19%, 18%), hsl(214, 24%, 11%));/*from Dark Blue to Dark Blue modified to be darker*/
+    width: 330px;
+    height: 360px;
 
     border-radius: 15px;
     padding: 20px;
+}
+
+.rating_card{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.star_icon{
+    height: 38px;
+    width: 38px;
+    background-color: hsl(213, 19%, 18%);/*dark blue*/
+    border-radius: 50%;
+    padding: 12px 12px;
 }
 
 menu{
     padding: 0;
     margin: 0;
     display: grid;
+
+    gap: 1.5rem 0;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.button_list{
+    justify-self: center;
+}
+
+.button_txt{
+    background-color: hsl(213, 19%, 18%);/*dark blue*/
+    color: hsl(217, 12%, 63%); /*Light Grey*/
+    font-size: 0.9375rem;/*15px*/
+    border-radius: 50%;
+    padding: 10px 18px;
+
+    border: none;
+    cursor: pointer;
+}
+
+.submit_button_list{
+    grid-area: 2/1/3/6;
 }
 
 .submit_button{
-    grid-area: 2/1/3/6;
+    color: hsl(0, 0%, 100%);/*white*/
+    background-color: hsl(25, 97%, 53%);/*orange*/
+
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+
+    font-size: 0.9rem;
+    letter-spacing: 0.2rem;
 }
 
 li{
