--- a/style.css
+++ b/style.css
@@ -70,6 +70,16 @@ menu{
     cursor: pointer;
 }
 
+.button_txt:active{
+    background-color: hsl(217, 12%, 63%);/*Light Grey*/
+    color: hsl(0, 0%, 100%);/*white*/
+}
+
+.button_txt:focus{
+    background-color: hsl(217, 12%, 63%);/*Light Grey*/
+    color: hsl(0, 0%, 100%);/*white*/
+}
+
 .submit_button_list{
     grid-area: 2/1/3/6;
 }
@@ -86,6 +96,11 @@ menu{
 
     font-size: 0.9rem;
     letter-spacing: 0.2rem;
+}
+
+.submit_button:active{
+    background-color: hsl(0, 0%, 100%);/*white*/
+    color: hsl(25, 97%, 53%); /*orange*/
 }
 
 li{
