--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ body{
 }
 
 menu{
+    margin: 0;
+    padding: 0;
+}
+
+menu form{
     padding: 0;
     margin: 0;
     display: grid;
@@ -59,7 +64,12 @@ menu{
     justify-self: center;
 }
 
-.button_txt{
+.button_input{
+    /*This hides radio default button*/
+    display: none;
+}
+
+.button_label{
     background-color: hsl(213, 19%, 18%);/*dark blue*/
     color: hsl(217, 12%, 63%); /*Light Grey*/
     font-size: 0.9375rem;/*15px*/
@@ -70,12 +80,12 @@ menu{
     cursor: pointer;
 }
 
-.button_txt:active{
+.button_label:active{
     background-color: hsl(217, 12%, 63%);/*Light Grey*/
     color: hsl(0, 0%, 100%);/*white*/
 }
 
-.button_txt:focus{
+.button_label:focus{
     background-color: hsl(217, 12%, 63%);/*Light Grey*/
     color: hsl(0, 0%, 100%);/*white*/
 }
