--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 .card{
     background-color: hsl(214, 24%, 11%);/*Dark Blue modified to be darker*/
     background-image: linear-gradient(hsl(213, 19%, 18%), hsl(214, 24%, 11%));/*from Dark Blue to Dark Blue modified to be darker*/
-    width: 330px;
+    max-width: 330px; /*here I use max-width in case of screens smaller than 330px*/
     height: 360px;
 
     border-radius: 15px;
@@ -45,14 +45,11 @@ body{
     padding: 12px 12px;
 }
 
-menu{
-    margin: 0;
+fieldset{
     padding: 0;
-}
+    margin: 0;
+    border: none;
 
-menu form{
-    padding: 0;
-    margin: 0;
     display: grid;
 
     gap: 1.5rem 0;
@@ -60,16 +57,19 @@ menu form{
     grid-template-rows: 1fr 1fr;
 }
 
-.button_list{
-    justify-self: center;
-}
-
 .button_input{
     /*This hides radio default button*/
     display: none;
 }
 
+.button_input:checked + .button_label{
+    background-color: hsl(217, 12%, 63%);/*Light Grey*/
+    color: hsl(0, 0%, 100%);/*white*/
+}
+
 .button_label{
+    justify-self: center;
+
     background-color: hsl(213, 19%, 18%);/*dark blue*/
     color: hsl(217, 12%, 63%); /*Light Grey*/
     font-size: 0.9375rem;/*15px*/
@@ -78,23 +78,13 @@ menu form{
 
     border: none;
     cursor: pointer;
-}
 
-.button_label:active{
-    background-color: hsl(217, 12%, 63%);/*Light Grey*/
-    color: hsl(0, 0%, 100%);/*white*/
-}
-
-.button_label:focus{
-    background-color: hsl(217, 12%, 63%);/*Light Grey*/
-    color: hsl(0, 0%, 100%);/*white*/
-}
-
-.submit_button_list{
-    grid-area: 2/1/3/6;
+    display: block;
 }
 
 .submit_button{
+    grid-area: 2/1/3/6;
+
     color: hsl(0, 0%, 100%);/*white*/
     background-color: hsl(25, 97%, 53%);/*orange*/
 
@@ -113,10 +103,27 @@ menu form{
     color: hsl(25, 97%, 53%); /*orange*/
 }
 
-li{
-    list-style: none;
+.thank_u_card{
+    display: none; /*hides the card until activated by js*/
+    height: 100%;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
 }
 
-.thank_u_card{
-    display: none;
+.orange_txt{
+    color: hsl(25, 97%, 53%); /*orange*/
+
+    background-color: hsl(213, 19%, 18%);/*dark blue*/
+    border-radius: 20px;
+    padding: 5px 10px;
+
+}
+
+.thank_u_card .big_txt{
+    font-size: 1.5rem;
+
+
 }
